fix header-menu-wrap (align-items: center;)

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -86,6 +86,7 @@
   .header-menu-wrap {
     display: flex;
     gap: 20px;
+    align-items: center;
   }
   .header-menu-list {
     display: flex;
